Enabled start game button. Made the boss hidden until you start the game. Maybe fixed double tap to zoom on the boss on mobile only.

--- a/style.css
+++ b/style.css
@@ -26,3 +26,11 @@
 .border-black {
     border: 2px 1px solid yellow;
 }
+
+.hidden {
+    display: none !important;
+}
+
+.disable-dbl-tap-zoom {
+    touch-action: manipulation;
+}
